--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2013-5-8
 Title: Explorer for World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
-Depends: R (>= 2.14.2), shiny, reshape2, googleVis
+Depends: R (>= 2.14.2), shiny, reshape2, googleVis, ggplot2
 Description: Data from the United Nation's World Population Prospects 2012
 License: GPL (>= 2)
 URL: http://esa.un.org/wpp
