--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: wppExplorer
-Version: 1.0-1
+Version: 1.0-3
 Date: 2013-9-25
 Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
-Depends: R (>= 3.0.0), shiny, reshape2, plyr, Hmisc, googleVis, ggplot2
+Depends: R (>= 3.0.0)
+Imports: shiny, plyr, reshape2, googleVis, wpp2012, Hmisc, ggplot2
+Suggests: wpp2008, wpp2010
 Description: A shiny interface for exploring data in wpp2008-wpp2012 packages.
 License: GPL (>= 2)
