--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: wppExplorer
-Version: 1.3-0
+Version: 1.4-0
 Date: 2014-8-8
 Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
 Depends: R (>= 3.0.0)
-Imports: shiny, plyr, reshape2, googleVis, wpp2012, Hmisc, ggplot2
+Imports: shiny (>= 0.10.0), plyr, reshape2, googleVis, wpp2012, Hmisc, ggplot2
 Suggests: wpp2008, wpp2010
 Description: A shiny interface for exploring data in wpp2008-wpp2012 packages.
 License: GPL (>= 2)
