--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: wppExplorer
-Version: 1.6-0
+Version: 1.6-1
 Date: 2015-4-10
 Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
@@ -7,5 +7,5 @@ Maintainer: Hana Sevcikova <hanas@uw.edu>
 Depends: R (>= 3.0.0)
 Imports: shiny (>= 0.10.0), plyr, reshape2, googleVis, wpp2012, Hmisc, ggplot2
 Suggests: wpp2008, wpp2010
-Description: A shiny interface for exploring data in the wpp2008-wpp2012 packages.
+Description: A shiny interface for exploring data in the 'wpp2012' (or 2010, 2008) package.
 License: GPL (>= 2)
