--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(
 	get.wpp.year,
 	set.wpp.year
 	)
-import("wpp2012", "shiny", "reshape2", "plyr", "googleVis",  "ggplot2")
+import("wpp2012",  "reshape2", "plyr", "googleVis",  "ggplot2", "DT")
 importFrom(Hmisc, capitalize)
+
