--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
 Depends: R (>= 3.0.0)
-Imports: shiny (>= 0.10.0), plyr, reshape2, googleVis, wpp2012, Hmisc, ggplot2, DT
-Suggests: wpp2008, wpp2010,
-    testthat
-Description: A shiny interface for exploring data in the 'wpp2012' (or 2010, 2008) package.
+Imports: shiny (>= 0.10.0), plyr, reshape2, googleVis, wpp2015, Hmisc, ggplot2, DT
+Suggests: wpp2012, wpp2010, testthat
+Description: A shiny interface for exploring data in the 'wpp2015' (or 2012, 2010) package.
 License: GPL (>= 2)
