--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,5 @@ env:
     - RVERSION=oldrel
     - RVERSION=release
     - RVERSION=devel
+  global:
+    - R_CHECK_ARGS="--no-build-vignettes --as-cran"
