--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
 Depends: R (>= 3.0.0)
-Imports: shiny (>= 0.12.0), plyr, reshape2, googleVis, wpp2015, Hmisc, ggplot2, DT
+Imports: shiny (>= 0.12.0), shinyjs, plyr, reshape2, googleVis, wpp2015, Hmisc, ggplot2, DT
 Suggests: wpp2012, wpp2010, testthat
 Description: Explore data in the 'wpp2015' (or 2012, 2010) package using a 'shiny' interface.
 License: GPL (>= 2)
