--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
 Depends: R (>= 3.0.0)
-Imports: shiny (>= 0.13.0), shinythemes, shinyjs, plyr, reshape2, googleVis, wpp2019, Hmisc, ggplot2, DT
+Imports: shiny (>= 0.13.0), shinythemes, shinyjs, plyr, reshape2, googleVis, wpp2022, Hmisc, ggplot2, DT
 Suggests: wpp2017, wpp2015, wpp2012, wpp2010, testthat
-Description: Explore data in the 'wpp2019' (or 2017, 2015, ...) package using a 'shiny' interface.
+Remotes: PPgP/wpp2022
+Description: Explore data in the 'wpp2022' (or 2019, 2017, 2015, ...) package using a 'shiny' interface.
 License: GPL-3 | file LICENSE
