--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,6 @@ Maintainer: Hana Sevcikova <hanas@uw.edu>
 Depends: R (>= 3.0.0)
 Imports: shiny (>= 0.13.0), shinythemes, shinyjs, plyr, reshape2, googleVis, wpp2024, Hmisc, ggplot2, DT, data.table
 Suggests: wpp2022, wpp2019, wpp2017, wpp2015, wpp2012, wpp2010, testthat
-Remotes: PPgp/wpp2024, PPgp/wpp2022
+Remotes: PPgp/wpp2024@shinyapp_wpp2024explorer
 Description: Explore data in the 'wpp2024' (or 2022, 2019, 2017, 2015, ...) package using a 'shiny' interface.
 License: GPL-3 | file LICENSE
